<resources>
    <string name="app_name">NyotaNjemaApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup_now">Not yet registered? SignUp Now</string>
    <string name="username">Username</string>
    <string name="login_text">Login</string>
    <string name="already_have_an_account_sign_in">Already Have an Account?Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_text">Register</string>
    <string name="phone">Phone</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>